# yeet-and-yoink

./: .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  apps_topology.md  config.example.toml  flake.nix  install-native-host.sh  install.sh  yny.conf
docs/plans/: 2026-03-04-adapter-topology-unification.md  2026-03-04-chain-resolver-design.md  2026-03-04-chain-resolver-implementation.md  2026-03-04-mux-topology-pattern-extraction-design.md  2026-03-04-mux-topology-pattern-extraction.md  2026-03-15-engine-layer-refactor-design.md  2026-03-15-engine-simplification-design.md  2026-03-15-engine-simplification.md
native-host/: com.yeet_and_yoink.chromium_bridge.json.template
openspec/changes/rewrite-cross-domain-pane-architecture/: design.md  proposal.md
plugin/: init.lua
plugins/zellij-break/src/: main.rs
src/: browser_native.rs  config.rs  lib.rs  logging.rs  main.rs
src/adapters/: mod.rs
src/adapters/apps/: alacritty.rs  chromium.rs  emacs.rs  foot.rs  ghostty.rs  kitty.rs  librefox.rs  librewolf.rs  mod.rs  nvim.rs  terminal_mux.rs  tmux.rs  vscode.rs  wezterm.rs  zellij.rs
src/adapters/terminal_multiplexers/: kitty.rs  mod.rs  tmux.rs  wezterm.rs  zellij.rs
src/adapters/window_managers/: i3.rs  mod.rs  niri.rs  paneru.rs  yabai.rs
src/commands/: focus_or_cycle.rs  mod.rs  resize.rs
src/engine/: chain_resolver.rs  contract.rs  direction.rs  domain.rs  domain_plugins.rs  mod.rs  orchestrator.rs  runtime.rs  topology.rs  transfer.rs  window_manager.rs
src/engine/actions/: context.rs  (+6 more)
tests/: cross_domain_orchestrator.rs  emacs_e2e.rs
(+21 files in other folders)
