[package]
name = "yeet-and-yoink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yny"
path = "src/main.rs"

[dependencies]
niri-ipc = "=25.11.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
etcetera = "0.8"
